# cryptopals

./: Cargo.toml  README.md  build.zig  build.zig.zon  rustfmt.toml
old/: build.zig
old/src/: Data.zig  hammingDistance.zig  oracle.zig  root.zig
old/src/attack/: Profile.zig  aesEcbDecipherPostfix.zig  aesProfileCutPaste.zig
old/src/blackbox/: Encrypter.zig
old/src/challenges/: set2.zig  set3.zig
old/src/cipher/: AesEcb.zig  Base64.zig  Hex.zig  XOR.zig  aes.zig
src/: Blackbox.zig  Data.zig  attack.rs  attack.zig  blackbox.rs  blackbox.zig  challenges.rs  challenges.zig  challenges_slow.zig  cipher.rs  cipher.zig  data.rs  data.zig  decrypt.rs  error.rs  hamming_distance.rs  lib.rs  main.rs  main.zig  oracle.rs  oracle.zig  pad.rs  pad.zig  pkcs7.rs  root.zig  score.zig  xor.rs  xor.zig
src/attack/: aes.zig  aesCbcBitflip.zig  aesCbcPaddingOracle.zig  aesEcbDecipherPostfix.zig  aesEcbInfix.zig  aesEcbPrefix.zig  aesProfileCutPaste.zig  block.zig  score.rs  score.zig  xor.rs  xor.zig
src/blackbox/: Decrypter.zig  EcbOrCbc.zig  EcbPrefix.zig  EcbProfile.zig  EncDec.zig  Encrypter.zig  PaddingOracle.zig  aes_ecb_cbc.rs  aes_ecb_prefix.rs
src/challenges/: challenge11.rs  set1.zig  set2.zig  set3.zig
src/challenges/set2/: AesComments.zig  AesEcbOrCbc.zig  AesInfix.zig  AesPrefix.zig  (+3 more)
src/cipher/: AES.zig  AesCbc.zig  AesEcb.zig  Base64.zig  Hex.zig  XOR.zig  aes.zig  aes_128_cbc.rs  aes_128_ecb.rs  aes_cbc.rs  aes_ecb.rs
src/data/: base64.rs  hamming_distance.rs  hex.rs  pad.rs  xor.rs
src/decrypt/: aes_128_ecb.rs  xor.rs
src/oracle/: challenge11.rs
(+4 files in other folders)
