[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
hex = "0.4"
itertools = "0.11"
openssl = "0.10"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8.5"
